--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "lodash.debounce": "^4.0.8",
+    "lodash.range": "^3.2.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
@@ -11,7 +12,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.3"
+    "styled-components": "^2.2.3",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
